# dataencryptor

./: Cargo.toml  README.md  example.txt  prompt.txt  rustc-ice-2026-06-26T14_12_02-10932.txt  systemprompt.txt
src/: crypto.rs  deflate.rs  dialog.rs  gif_player.rs  gui.rs  handler.rs  main.rs  particles.rs  theme.rs  worker.rs
src/ui/: breadcrumbs.rs  browser_screen.rs  context_menu.rs  event.rs  filedetails.rs  filetree.rs  home_screen.rs  loading.rs  mod.rs  password.rs  password_popup.rs  properties.rs  state.rs  title_bar.rs  toast.rs  types.rs
src/ui/browser/: breadcrumbs.rs  file_details.rs  file_row.rs  file_tree.rs  folder_row.rs  mod.rs
