[package]
name = "dataencryptor"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.0"
eframe = "0.34.3"
egui = "0.34.3"
flate2 = "1.1.9"
opener = "0.8.5"
rfd = "0.17.2"
serde = {version = "1.0.228", features= ["derive"]}
ring = "0.17.14"
walkdir = "2.5.0"
tokio = {version = "1", features = ["rt", "rt-multi-thread"]}
rand = "0.10.1"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25.10", features = ["gif"] }
uuid = {version = "1.23.4", features = ["v4"]}
zeroize = "1.9.0"
argon2 = "0.5.3"
rayon = "1"
glow-bloom = { git = "https://github.com/timoxxor/egui-bloom.git", version = "0.1.0" }
